<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/help"
        app1:showAsAction="always"
        android:icon="@drawable/help_icon"
        android:id="@+id/circuits_help"/>

    <item android:title="@string/all_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_all"/>

    <item android:title="@string/fifties_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_50s"/>

    <item android:title="@string/sixties_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_60s"/>


    <item android:title="@string/seventies_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_70s"/>


    <item android:title="@string/eighties_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_80s"/>

    <item android:title="@string/nineties_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_90s"/>

    <item android:title="@string/thousands_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_00s"/>

    <item android:title="@string/tens_circuits"
        app:showAsAction="never"
        android:id="@+id/circuits_10s"/>

</menu>