<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:elevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="10"
        android:id="@+id/calendarRowRoot">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:orientation="vertical"
            android:gravity="center"
            android:weightSum="3"
            android:id="@+id/dateTimeLayout">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/qualifyingOnPlace">

                <!-- this is where the  qualifying icon will be when
                    qualifying  is in progress-->

            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/letter_size"
                    android:id="@+id/race_dateTxt"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/race_time"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/letter_size"
                    android:id="@+id/race_timeTxt"/>

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countryFlag"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/locality"
                android:textAlignment="center"
                android:textSize="@dimen/letter_size"
                android:gravity="center"
                android:id="@+id/localityTxt"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/circuit_name"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/letter_size"
            android:id="@+id/circuitNameTxt"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/info_results"
            android:id="@+id/infoButton"/>

    </LinearLayout>

</android.support.v7.widget.CardView>